update style and add form

--- a/index.html
+++ b/index.html
@@ -191,11 +191,13 @@
           Use the intake form below. We will follow up to confirm scope and fit.
         </p>
 
-        <!-- Replace this link with your Microsoft Form or SharePoint intake link -->
+        <!-- Embedded Microsoft Forms intake -->
         <div class="card">
           <p><b>Project Intake Form:</b></p>
-          <p><a href="https://example.com" target="_blank" rel="noopener noreferrer">https://example.com</a></p>
-          <p class="small muted">Tip: Replace the link with your Microsoft Forms intake URL.</p>
+          <div class="form-embed">
+            <iframe src="https://forms.cloud.microsoft/r/4Xu57eJY1k" title="BITS Project Intake Form" style="width:100%;min-height:700px;border:0;" allowfullscreen></iframe>
+          </div>
+          <p class="small muted">If the form doesn't render, <a href="https://forms.cloud.microsoft/r/4Xu57eJY1k" target="_blank" rel="noopener noreferrer">open the intake form in a new tab</a>.</p>
         </div>
 
         <div class="card">
