--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BITS | Business & Industry Technology Solutions</title>
-  <meta name="description" content="Franklin University BITS connects students with real-world tech projects for nonprofits, small governments, and small businesses." />
+  <meta name="description" content="Franklin University BITS connects organizations with student-led tech projects." />
 
-  <!-- Open Graph / Social -->
-  <meta property="og:title" content="BITS | Business & Industry Technology Solutions" />
-  <meta property="og:description" content="Franklin University BITS connects students with real-world tech projects for nonprofits, small governments, and small businesses." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/og-image.png" />
-  <meta property="og:site_name" content="BITS" />
-  <meta name="twitter:card" content="summary_large_image" />
-
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/style.css" />
   <link rel="icon" href="/favicon.ico" />
 </head>
@@ -21,219 +17,227 @@
   <!-- Skip link for keyboard users -->
   <a class="skip-link" href="#main">Skip to content</a>
 
-  <header class="top" role="banner">
-    <div class="container">
-      <div class="brand">
-        <div class="logo">BITS</div>
-        <div>
-          <div class="title">Business & Industry Technology Solutions</div>
-          <div class="subtitle">A pilot initiative to expand student career connectedness through real-world projects</div>
-        </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
+    <div class="container-lg">
+      <a class="navbar-brand fw-800" href="#home">
+        <span class="brand-logo">BITS</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto gap-2">
+          <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#partners">For Partners</a></li>
+          <li class="nav-item"><a class="nav-link" href="#intake">Submit</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
       </div>
-
-      <nav class="nav" aria-label="Primary navigation">
-        <a href="#overview">Overview</a>
-        <a href="#partners">For Partners</a>
-        <a href="#students">For Students</a>
-        <a href="#projects">Project Types</a>
-        <a href="#intake">Submit a Project</a>
-        <a href="#contact">Contact</a>
-      </nav>
     </div>
-  </header>
+  </nav>
 
-  <main id="main" role="main">
-    <section class="hero">
-      <div class="container hero-grid">
-        <div>
-          <h1>Real projects. Faculty oversight. Portfolio-ready outcomes.</h1>
-          <p>
-            BITS connects Franklin University students with small-scale, real-world technology projects from
-            nonprofits, small governments, and small businesses. Students gain applied experience while partners
-            receive meaningful support.
-          </p>
-
-          <div class="cta-row">
-            <a class="btn primary" href="#intake">Submit a Project</a>
-            <a class="btn" href="#partners">Partner Details</a>
+  <main id="main">
+    <!-- Hero Section -->
+    <section class="hero-section">
+      <div class="container-lg py-5">
+        <div class="row align-items-center gy-4">
+          <div class="col-lg-7">
+            <h1 class="display-4 fw-bold mb-4">Real projects.<br>Real impact.<br>Real outcomes.</h1>
+            <p class="lead text-muted mb-4">
+              BITS (Business & Industry Technology Solutions) connects Franklin University students with nonprofits, small governments, and small businesses. 
+              Organizations get meaningful tech solutions. Students gain portfolio-ready experience.
+            </p>
+            <a href="#intake" class="btn btn-primary btn-lg px-5">Submit a Project</a>
           </div>
-
-          <div class="pill-row">
-            <span class="pill req">Required docs: Employer + Student</span>
-            <span class="pill cond">NDA only if needed</span>
-            <span class="pill">Pilot: 3–5 projects (2026)</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <h3>What partners can expect</h3>
-          <ul>
-            <li>Clear scope and single point of contact</li>
-            <li>Student team with faculty supervision</li>
-            <li>Milestones and check-ins</li>
-            <li>Final deliverables and partner feedback survey</li>
-          </ul>
-          <p class="small muted">Note: BITS projects are educational and not professional consulting engagements.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="overview" class="section">
-      <div class="container">
-        <h2>Overview</h2>
-        <div class="grid-3">
-          <div class="card">
-            <h3>Goal</h3>
-            <p>Expand student career connectedness by delivering authentic, client-facing project experiences.</p>
-          </div>
-          <div class="card">
-            <h3>Who we serve</h3>
-            <p>Nonprofits, small governments, and small businesses with practical technology needs.</p>
-          </div>
-          <div class="card">
-            <h3>How it works</h3>
-            <p>Project intake → scope review → student onboarding → execution → deliverables → feedback.</p>
+          <div class="col-lg-5">
+            <div class="card border-0 shadow-lg p-5 h-100 bg-gradient">
+              <h5 class="card-title fw-bold mb-4">What partners get</h5>
+              <ul class="list-unstyled">
+                <li class="mb-3"><span class="badge bg-primary me-2">✓</span> Clear scope &amp; accountability</li>
+                <li class="mb-3"><span class="badge bg-primary me-2">✓</span> Faculty-supervised team</li>
+                <li class="mb-3"><span class="badge bg-primary me-2">✓</span> Regular check-ins &amp; milestones</li>
+                <li class="mb-3"><span class="badge bg-primary me-2">✓</span> Final deliverables &amp; feedback</li>
+              </ul>
+              <p class="small text-muted mt-4">Educational projects, not consulting engagements.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="projects" class="section alt">
-      <div class="container">
-        <h2>Project Types</h2>
-        <div class="grid-2">
-          <div class="card">
-            <h3>Web & Software</h3>
-            <ul>
-              <li>Website refresh, accessibility improvements</li>
-              <li>Simple web apps, forms, automation</li>
-              <li>Documentation and user training materials</li>
-            </ul>
+    <!-- Overview Section -->
+    <section id="overview" class="py-5 bg-light">
+      <div class="container-lg">
+        <h2 class="text-center mb-5 fw-bold">How It Works</h2>
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="card border-0 shadow-sm h-100 text-center">
+              <div class="card-body p-5">
+                <div class="display-1 text-primary mb-3">📋</div>
+                <h5 class="card-title fw-bold">Intake &amp; Scope</h5>
+                <p class="card-text text-muted">Submit your project with goals, timeline, and tech preferences.</p>
+              </div>
+            </div>
           </div>
-          <div class="card">
-            <h3>Data, AI, Analytics</h3>
-            <ul>
-              <li>Dashboards and reporting</li>
-              <li>Data cleanup, pipeline basics</li>
-              <li>Marketing analytics insights</li>
-            </ul>
+          <div class="col-md-4">
+            <div class="card border-0 shadow-sm h-100 text-center">
+              <div class="card-body p-5">
+                <div class="display-1 text-primary mb-3">👥</div>
+                <h5 class="card-title fw-bold">Team &amp; Supervision</h5>
+                <p class="card-text text-muted">Matched with qualified students under faculty guidance.</p>
+              </div>
+            </div>
           </div>
-          <div class="card">
-            <h3>Cybersecurity</h3>
-            <ul>
-              <li>Security posture review (non-invasive)</li>
-              <li>Risk assessment and recommendations</li>
-              <li>Awareness materials and policy templates</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Cloud & Infrastructure</h3>
-            <ul>
-              <li>Cloud migration planning (lightweight)</li>
-              <li>Configuration guidance and documentation</li>
-              <li>Cost and governance recommendations</li>
-            </ul>
+          <div class="col-md-4">
+            <div class="card border-0 shadow-sm h-100 text-center">
+              <div class="card-body p-5">
+                <div class="display-1 text-primary mb-3">✨</div>
+                <h5 class="card-title fw-bold">Delivery &amp; Feedback</h5>
+                <p class="card-text text-muted">Get working deliverables and provide feedback for continuous learning.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="partners" class="section">
-      <div class="container">
-        <h2>For Partners</h2>
-        <div class="grid-2">
-          <div class="card">
-            <h3>Partner responsibilities</h3>
-            <ul>
-              <li>Provide a clear project goal and context</li>
-              <li>Assign one primary point of contact</li>
-              <li>Participate in short check-ins</li>
-              <li>Provide feedback at the end</li>
-            </ul>
+    <!-- Project Types Section -->
+    <section id="projects" class="py-5">
+      <div class="container-lg">
+        <h2 class="text-center mb-5 fw-bold">Project Types We Support</h2>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="card border-0 shadow-sm h-100 hover-lift">
+              <div class="card-body">
+                <h6 class="text-primary fw-bold mb-3">🌐 Web &amp; Software</h6>
+                <ul class="small text-muted list-unstyled">
+                  <li>✓ Website refresh</li>
+                  <li>✓ Web apps &amp; forms</li>
+                  <li>✓ Automation tools</li>
+                  <li>✓ Documentation</li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="card">
-            <h3>Recommended project scope</h3>
-            <ul>
-              <li>2–4 weeks for small deliverables</li>
-              <li>8–12 weeks for capstone-style work</li>
-              <li>Well-defined outcomes and constraints</li>
-            </ul>
-            <p class="small muted">We will help refine scope during intake.</p>
+          <div class="col-md-6 col-lg-3">
+            <div class="card border-0 shadow-sm h-100 hover-lift">
+              <div class="card-body">
+                <h6 class="text-primary fw-bold mb-3">📊 Data &amp; Analytics</h6>
+                <ul class="small text-muted list-unstyled">
+                  <li>✓ Dashboards</li>
+                  <li>✓ Data pipelines</li>
+                  <li>✓ Analytics insights</li>
+                  <li>✓ Reporting</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="card border-0 shadow-sm h-100 hover-lift">
+              <div class="card-body">
+                <h6 class="text-primary fw-bold mb-3">🔒 Cybersecurity</h6>
+                <ul class="small text-muted list-unstyled">
+                  <li>✓ Security review</li>
+                  <li>✓ Risk assessment</li>
+                  <li>✓ Policy templates</li>
+                  <li>✓ Training materials</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="card border-0 shadow-sm h-100 hover-lift">
+              <div class="card-body">
+                <h6 class="text-primary fw-bold mb-3">☁️ Cloud &amp; Infra</h6>
+                <ul class="small text-muted list-unstyled">
+                  <li>✓ Migration planning</li>
+                  <li>✓ Configuration</li>
+                  <li>✓ Cost optimization</li>
+                  <li>✓ Governance</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="students" class="section alt">
-      <div class="container">
-        <h2>For Students</h2>
-        <div class="grid-3">
-          <div class="card">
-            <h3>What you gain</h3>
-            <p>Portfolio artifacts, client communication practice, teamwork experience, and references.</p>
+    <!-- For Partners Section -->
+    <section id="partners" class="py-5 bg-light">
+      <div class="container-lg">
+        <h2 class="text-center mb-5 fw-bold">For Partners</h2>
+        <div class="row g-4">
+          <div class="col-lg-6">
+            <h5 class="fw-bold mb-3">Your responsibilities</h5>
+            <div class="list-group list-group-flush">
+              <div class="list-group-item border-0 px-0">✓ Provide clear project scope &amp; goals</div>
+              <div class="list-group-item border-0 px-0">✓ Assign one point of contact</div>
+              <div class="list-group-item border-0 px-0">✓ Participate in bi-weekly check-ins</div>
+              <div class="list-group-item border-0 px-0">✓ Review deliverables &amp; provide feedback</div>
+            </div>
           </div>
-          <div class="card">
-            <h3>Expectations</h3>
-            <p>Professional conduct, timely communication, meeting milestones, and documentation.</p>
-          </div>
-          <div class="card">
-            <h3>Where it fits</h3>
-            <p>Capstone courses, PF511, co-curricular projects, and special topic opportunities.</p>
+          <div class="col-lg-6">
+            <h5 class="fw-bold mb-3">Typical timelines</h5>
+            <div class="list-group list-group-flush">
+              <div class="list-group-item border-0 px-0"><strong>2–4 weeks:</strong> Small, discrete deliverables</div>
+              <div class="list-group-item border-0 px-0"><strong>8–12 weeks:</strong> Capstone-scale projects</div>
+              <div class="list-group-item border-0 px-0"><strong>Custom:</strong> Let's discuss your needs</div>
+              <div class="list-group-item border-0 px-0 text-muted small">We help refine scope during intake</div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="intake" class="section">
-      <div class="container">
-        <h2>Submit a Project</h2>
-        <p>
-          Use the intake form below. We will follow up to confirm scope and fit.
+    <!-- Intake Form Section -->
+    <section id="intake" class="py-5">
+      <div class="container-lg">
+        <h2 class="text-center mb-2 fw-bold">Submit Your Project</h2>
+        <p class="text-center text-muted mb-5">Fill out the form below. We'll review and follow up within 2 business days.</p>
+        
+        <div class="card border-0 shadow-lg">
+          <div class="card-body p-0">
+            <div class="form-embed">
+              <iframe src="https://forms.cloud.microsoft/r/4Xu57eJY1k" title="BITS Project Intake Form" style="width:100%;min-height:700px;border:0;border-radius:0.5rem;" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+
+        <p class="text-center text-muted small mt-4">
+          Can't see the form? <a href="https://forms.cloud.microsoft/r/4Xu57eJY1k" target="_blank" rel="noopener noreferrer">Open it in a new tab</a>
         </p>
-
-        <!-- Embedded Microsoft Forms intake -->
-        <div class="card">
-          <p><b>Project Intake Form:</b></p>
-          <div class="form-embed">
-            <iframe src="https://forms.cloud.microsoft/r/4Xu57eJY1k" title="BITS Project Intake Form" style="width:100%;min-height:700px;border:0;" allowfullscreen></iframe>
-          </div>
-          <p class="small muted">If the form doesn't render, <a href="https://forms.cloud.microsoft/r/4Xu57eJY1k" target="_blank" rel="noopener noreferrer">open the intake form in a new tab</a>.</p>
-        </div>
-
-        <div class="card">
-          <h3>Minimum info we need</h3>
-          <ul>
-            <li>Organization name and primary contact</li>
-            <li>Problem statement and desired outcome</li>
-            <li>Timeline and constraints</li>
-            <li>Preferred tech area (web, data, cyber, cloud)</li>
-          </ul>
-        </div>
       </div>
     </section>
 
-    <section id="contact" class="section alt">
-      <div class="container">
-        <h2>Contact</h2>
-        <div class="card">
-          <p><b>Kemal Aydin</b><br/>
-            Program Chair, Information Technology<br/>
-            Franklin University<br/>
-            <a href="mailto:kemal.aydin@franklin.edu">kemal.aydin@franklin.edu</a>
-          </p>
-          <p class="small muted">If you are a nonprofit or local government partner, please indicate that in your intake submission.</p>
+    <!-- Contact Section -->
+    <section id="contact" class="py-5 bg-dark text-white">
+      <div class="container-lg text-center">
+        <h2 class="mb-4 fw-bold">Get in Touch</h2>
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <h5 class="mb-3">Kemal Aydin</h5>
+            <p class="text-muted">Program Chair, Information Technology<br>Franklin University</p>
+            <a href="mailto:kemal.aydin@franklin.edu" class="btn btn-primary">Send Email</a>
+            <p class="small text-muted mt-4">Nonprofits &amp; local government? Please mention it in your submission.</p>
+          </div>
         </div>
       </div>
     </section>
   </main>
 
-  <footer class="footer" role="contentinfo">
-    <div class="container footer-row">
-      <div>© <span id="year"></span> Franklin University • BITS</div>
-      <div class="muted">Student-led, faculty-supervised applied learning</div>
+  <!-- Footer -->
+  <footer class="bg-light py-4 border-top">
+    <div class="container-lg text-center text-muted small">
+      <p class="mb-0">© <span id="year"></span> Franklin University • BITS<br>
+      <span class="text-secondary">Student-led, faculty-supervised applied learning</span></p>
     </div>
   </footer>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
